# json-interpolator

./: LICENSE  README.md  pyproject.toml
src/json_interpolator/: __init__.py  interpolator.py
tests/: test_interpolator.py
